--- a/ansible/roles/mariadb/templates/mariadb-server.cnf.ubuntu.j2
+++ b/ansible/roles/mariadb/templates/mariadb-server.cnf.ubuntu.j2
@@ -39,6 +39,8 @@ performance_schema = ON
 innodb_file_per_table = ON
 innodb_buffer_pool_size = 64M
 innodb_log_file_size = 16M
+max_heap_table_size = 64M
+tmp_table_size = 64M
 
 #key_buffer_size        = 16M
 #max_allowed_packet     = 16M
@@ -122,10 +124,10 @@ long_query_time = 3
 # MySQL/MariaDB default is Latin1, but in Debian we rather default to the full
 # utf8 4-byte character set. See also client.cnf
 #
-character-set-server  = utf8
-collation-server      = utf8_bin
-#character-set-server  = utf8mb4
-#collation-server      = utf8mb4_general_ci
+#character-set-server  = utf8
+#collation-server      = utf8_bin
+character-set-server  = utf8mb4
+collation-server      = utf8mb4_general_ci
 
 #
 # * InnoDB
