--- a/ansible/roles/mariadb/templates/mariadb-server.cnf.j2
+++ b/ansible/roles/mariadb/templates/mariadb-server.cnf.j2
@@ -47,10 +47,10 @@ pid-file=/run/mariadb/mariadb.pid
 # If you use the same .cnf file for MySQL and MariaDB,
 # you can put MariaDB-only options here
 [mariadb]
-character-set-server = utf8
-collation-server = utf8_bin
-#character-set-server = utf8mb4
-#collation-server = utf8mb4_general_ci
+#character-set-server = utf8
+#collation-server = utf8_bin
+character-set-server = utf8mb4
+collation-server = utf8mb4_general_ci
 
 query_cache_limit = 8M
 query_cache_size = 16M
