--- a/ansible/6.0/roles/mariadb/templates/mariadb-server.cnf.j2
+++ b/ansible/6.0/roles/mariadb/templates/mariadb-server.cnf.j2
@@ -17,7 +17,7 @@
 datadir=/var/lib/mysql
 socket=/var/lib/mysql/mysql.sock
 #log-error=/var/log/mariadb/mariadb.log
-pid-file=/run/mariadb/mariadb.pid
+#pid-file=/run/mariadb/mariadb.pid
 
 
 #
