--- a/ansible/6.0/roles/mariadb/templates/mariadb-server.cnf.j2
+++ b/ansible/6.0/roles/mariadb/templates/mariadb-server.cnf.j2
@@ -50,7 +50,7 @@ socket=/var/lib/mysql/mysql.sock
 #character-set-server = utf8
 #collation-server = utf8_bin
 character-set-server = utf8mb4
-collation-server = utf8mb4_general_ci
+collation-server = utf8mb4_bin
 
 query_cache_limit = 8M
 query_cache_size = 16M
