--- a/ansible/6.0/roles/mariadb/templates/mariadb-server.cnf.ubuntu.j2
+++ b/ansible/6.0/roles/mariadb/templates/mariadb-server.cnf.ubuntu.j2
@@ -34,13 +34,13 @@ query_cache_limit = 8M
 query_cache_size = 16M
 query_cache_type = 1
 join_buffer_size = 512K
-thread_cache_size = 64
+thread_cache_size = 32
 performance_schema = ON
 innodb_file_per_table = ON
-innodb_buffer_pool_size = 64M
-innodb_log_file_size = 16M
-max_heap_table_size = 64M
-tmp_table_size = 64M
+innodb_buffer_pool_size = 32M
+innodb_log_file_size = 8M
+max_heap_table_size = 32M
+tmp_table_size = 32M
 
 #key_buffer_size        = 16M
 #max_allowed_packet     = 16M
@@ -126,7 +126,8 @@ long_query_time = 3
 #character-set-server  = utf8
 #collation-server      = utf8_bin
 character-set-server  = utf8mb4
-collation-server      = utf8mb4_general_ci
+collation-server      = utf8mb4_bin
+
 
 #
 # * InnoDB
